<resources>
    <string name="app_name">StockGame</string>

    <string name="hello_world">Your Stocks</string>
    <string name="action_settings">Settings</string>
    <string name="introTextView">Your Stocks</string>
    <string name="tradeButton">TRADE</string>
    <string name="portfolioButton">Portfolio</string>
    <string name="netWorthButton">Net Worth</string>
    <string name="tradeTextView">Trade</string>
    <string name="actualsearchButton">Search</string>
    <string name="netWorthTitleTextView">Your Net Worth</string>
    <string name="cashTextView">Cash:</string>
    <string name="stockValueTextView">Total Stock Values:</string>
    <string name="netWorthTextView">Net Worth:</string>
    <string name="stockTitleTextView">Symbol of Stock</string>
    <string name="priceTextView">Price:</string>
    <string name="actualPriceTextView" />
    <string name="buyTextView">Buy:</string>
    <string name="sellTextView">Sell:</string>
    <string name="backButton">Back to Portfolio</string>
    <string name="confirmBuyButton">BUY</string>
    <string name="sellButton">SELL</string>

    <string name="loading">Loading...</string>

    <string name="searchStocksHint">Search Stocks</string>

</resources>
